# tmetric-helper

./: .gitignore  README.md  build.py  pyproject.toml  test_work_hours.py
.github/: copilot-instructions.md
launchd/: com.bukitoka.tmetric-helper.plist  install.sh
scripts/: install-launchd.sh  run-background.sh  uninstall-launchd.sh
src/tmetric_helper/: __init__.py  cli.py
